--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -1,95 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:screenOrientation="portrait">
+    android:padding="24dp"
+    android:gravity="center_horizontal">
 
+    <!-- Email -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Email:"
+        android:textSize="18sp"
+        android:layout_marginBottom="4dp" />
+
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="your Email address"
+        android:inputType="textEmailAddress"
+        android:textSize="16sp"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Password -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Password:"
+        android:textSize="18sp"
+        android:layout_marginBottom="4dp" />
+
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="your password"
+        android:inputType="textPassword"
+        android:textSize="16sp"
+        android:layout_marginBottom="12dp" />
+
+    <!-- Sign-up Text -->
+    <TextView
+        android:id="@+id/tvSignUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account? Sign up here"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_marginBottom="20dp" />
+
+    <!-- Buttons -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginLeft="40dp"
-            android:text="Email:"/>
-
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:hint="your Email address"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="40dp"
-            android:text="Password:"/>
-
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:hint="your password"/>
-
-        <TextView
-            android:id="@+id/tvSignUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:text="Don't have an account? Sign up here"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:gravity="center"
+        android:weightSum="2">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogin"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="log in"
-            android:layout_marginRight="2dp"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimary"
+            android:layout_weight="1"
+            android:layout_marginEnd="8dp"
+            android:text="Log in"
+            android:textSize="16sp"
+            android:textColor="@color/white"
             android:background="@drawable/cube_button"
             android:fontFamily="sans-serif-medium"
-            android:onClick="logInByButtonInDialog"/>
+            android:onClick="logInByButtonInDialog" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancel"
-            android:layout_width="120dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="cancel"
-            android:layout_marginLeft="2sp"
-            android:textSize="20sp"
-            android:textColor="?android:textColorPrimary"
+            android:layout_weight="1"
+            android:layout_marginStart="8dp"
+            android:text="Cancel"
+            android:textSize="16sp"
+            android:textColor="@color/white"
             android:background="@drawable/cube_button"
             android:fontFamily="sans-serif-medium"
-            android:onClick="cancelLoginDialogByButton"/>
-
+            android:onClick="cancelLoginDialogByButton" />
     </LinearLayout>
 
 </LinearLayout>
